ExampleGeneratorWrapperPlugin 0.1.0-SNAPSHOT